Fixed dark mode error

--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.cdnfonts.com/css/jetbrains-mono-2');
 
 :root {
+  color-scheme: light only;
   --font-family: "JetBrains Mono", monospace;
   --line-height: 1.20rem;
   --border-thickness: 2px;
